add route & navigation

--- a/src/views/Base/Scripttag/package.json
+++ b/src/views/Base/Scripttag/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "ScripttagList",
+    "name": "Scripttag",
     "version": "0.0.0",
     "private": true,
-    "main": "./ScripttagList.js"
+    "main": "./Scripttag.js"
   }
