--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hotstone-client",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "description": "Client side module for interacting with a HotStone service",
   "main": "index.js",
   "scripts": {
