--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hotstone-client",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "description": "Client side module for interacting with a HotStone service",
   "main": "lib/index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
