--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hotstone-client",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0-alpha.3",
   "description": "Client side module for interacting with a HotStone service",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "build": "webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
