--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "node-sass": "4.13.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
