--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,29 @@
+# typical-go
 /bin
 /release
 /.typical-tmp
-/vendor
-.envrc
-.env
+
+# go test
 *.test
 *.out
 
 # MacOS
 .DS_Store
 
-# dependencies
+# reactjs
 ui/node_modules
-
-# testing
 ui/coverage
-
-# production
 ui/build
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # misc
-.DS_Store
 .idea
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
+.env
+.envrc
 .env
