--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,4 +17,4 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Build
-      run: go build -v ./cmd/hotstone-se
+      run: go build -v ./cmd/hotstone-seo
