--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hotstone-seo/hotstone-client.git"
+    "url": "https://github.com/hotstone-seo/hotstone-seo.git"
   },
   "author": "Hawari Rahman <hawari.rahman17@gmail.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hotstone-seo/hotstone-client/issues"
+    "url": "https://github.com/hotstone-seo/hotstone-seo/issues"
   },
-  "homepage": "https://github.com/hotstone-seo/hotstone-client#readme",
+  "homepage": "https://github.com/hotstone-seo/hotstone-seo#readme",
   "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
