--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "Client side module for interacting with a HotStone service",
   "main": "./lib/hotstone-client.js",
   "scripts": {
-    "build": "webpack --mode=production --config webpack.config.js",
+    "build": "rm -rf lib && webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
