--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: "3"
 services:
+  grafana:
+    image: grafana/grafana
+    environment:
+      GF_AUTH_ANONYMOUS_ENABLED: "true"
+      GF_SECURITY_ADMIN_PASSWORD: pass
+      GF_SECURITY_ALLOW_EMBEDDING: "true"
+      GF_SERVER_HTTP_PORT: "3001"
+    ports:
+    - 3001:3001
+    networks:
+    - net-metrics
   postgres:
     image: postgres
     environment:
@@ -13,6 +24,15 @@ services:
     networks:
     - postgres
     restart: unless-stopped
+  prometheus:
+    image: prom/prometheus
+    command: --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+    - ./metric/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+    - 9090:9090
+    networks:
+    - net-metrics
   redis:
     image: redis:4.0.5-alpine
     command: redis-server --requirepass "${REDIS_PASSOWORD:-redispass}"
@@ -23,6 +43,8 @@ services:
     networks:
     - redis
 networks:
+  net-metrics:
+    driver: bridge
   postgres:
     driver: bridge
   redis: null
