docker-compose.yml: use timescale image. NOTE: pls remove old docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
     - net-metrics
   postgres:
-    image: postgres
+    image: timescale/timescaledb:latest-pg11
     environment:
       PGDATA: /data/postgres
       POSTGRES: ${PG_USER:-postgres}
