--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@babel/runtime": "^7.7.7",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "hotstone-client": "file:hotstone-client-0.2.0.tgz",
     "react": "^16.12.0",
