--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.4",
+    "@nivo/line": "^0.61.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -30,6 +31,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.5.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.12.0",
