--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.4",
     "@nivo/line": "^0.61.1",
+    "@umijs/hooks": "^1.5.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -37,7 +38,7 @@
     "react-test-renderer": "^16.12.0",
     "reactstrap": "^8.1.1",
     "simple-line-icons": "^2.4.1",
-    "typescript": "^3.7.2"
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "react-scripts": "^3.3.0"
