--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "@coreui/react": "^2.5.4",
     "@nivo/line": "^0.61.1",
     "@umijs/hooks": "^1.5.3",
-    "axios": "^0.19.0",
+    "axios": "^0.19.1",
+    "axios-hooks": "^1.9.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
