--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@coreui/react": "^2.5.4",
     "@nivo/line": "^0.61.1",
     "@umijs/hooks": "^1.5.3",
+    "@use-it/interval": "^0.1.3",
     "axios": "^0.19.1",
     "axios-hooks": "^1.9.0",
     "bootstrap": "^4.4.1",
