--- a/ui/package.json
+++ b/ui/package.json
@@ -22,12 +22,12 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "core-js": "^3.4.7",
+    "date-fns": "^2.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "moment": "^2.24.0",
     "node-sass": "4.13.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
