--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hotstone-client",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Client side module for interacting with a HotStone service",
   "main": "./lib/hotstone-client.js",
   "scripts": {
@@ -18,11 +18,16 @@
   },
   "homepage": "https://github.com/hotstone-seo/hotstone-seo#readme",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
