Add HotStone React component to example

--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "build": "rm -rf dist && rm -rf public && webpack --config webpack.client.js && webpack --config webpack.server.js",
+    "build": "rm server.js && rm -rf public && webpack --config webpack.client.js && webpack --config webpack.server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
