--- a/ui/package.json
+++ b/ui/package.json
@@ -41,7 +41,8 @@
     "react-test-renderer": "^16.12.0",
     "reactstrap": "^8.1.1",
     "simple-line-icons": "^2.4.1",
-    "url-join": "^4.0.1"
+    "url-join": "^4.0.1",
+    "xstate": "^4.7.6"
   },
   "devDependencies": {
     "react-scripts": "^3.3.0"
