--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@nivo/line": "^0.61.1",
     "@umijs/hooks": "^1.5.3",
     "@use-it/interval": "^0.1.3",
+    "@xstate/react": "^0.8.1",
     "axios": "^0.19.1",
     "axios-hooks": "^1.9.0",
     "bootstrap": "^4.4.1",
