--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -18,7 +18,7 @@
     "@babel/runtime": "^7.7.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "hotstone-client": "^0.3.0",
+    "hotstone-client": "file:hotstone-client-0.3.0.tgz",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
