--- a/ui/package.json
+++ b/ui/package.json
@@ -30,7 +30,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
-    "node-sass": "4.13.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
