--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -19,6 +19,7 @@
     "hotstone-client": "^0.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-element-to-jsx-string": "^14.3.1",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "serialize-javascript": "^2.1.2"
