--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
+    "hotstone-client": "^0.4.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
