--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@umijs/hooks": "^1.5.3",
     "@use-it/interval": "^0.1.3",
     "@xstate/react": "^0.8.1",
+    "antd": "^3.26.8",
     "axios": "^0.19.1",
     "axios-hooks": "^1.9.0",
     "bootstrap": "^4.4.1",
