--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-highlight-words": "^0.16.0",
     "react-hook-form": "^4.5.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
