--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.0.0-rc.4",
     "axios": "^0.19.2",
+    "date-fns": "^2.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
