--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^4.5.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
+    "react-table": "^7.0.0-rc.16",
     "react-test-renderer": "^16.12.0",
     "reactstrap": "^8.1.1",
     "simple-line-icons": "^2.4.1",
