--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.0.0-rc.4",
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-highlight-words": "^0.16.0",
