--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.0.0-rc.5",
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
+    "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
