--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
