--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.0.0-rc.5",
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
+    "http-proxy-middleware": "^1.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "prop-types": "^15.7.2",
