--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.0.0-rc.0",
+    "@nivo/line": "^0.61.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@use-hooks/interval": "^1.0.1",
     "antd": "^4.0.0-rc.5",
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
