--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -23,7 +23,8 @@
     "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "url-join": "^4.0.1"
+    "url-join": "^4.0.1",
+    "xstate": "^4.7.8"
   },
   "scripts": {
     "start": "react-scripts start",
