--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-  "[javascriptreact]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascript]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  "eslint.workingDirectories":["./ui-v2"]
 }
