--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "eslint.workingDirectories":["./ui-v2"]
+  "eslint.workingDirectories":["./ui-v2"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+}
 }
