--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -16,6 +16,7 @@
     "http-proxy-middleware": "^1.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "url-join": "^4.0.1",
+    "url-parse": "^1.4.7",
     "xstate": "^4.7.8"
   },
   "scripts": {
