--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@use-hooks/interval": "^1.0.1",
     "@xstate/react": "^0.8.1",
-    "antd": "^4.0.0-rc.5",
+    "antd": "^4.0.0",
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
     "http-proxy-middleware": "^1.0.0",
