--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -12,11 +12,12 @@
     "@xstate/react": "^0.8.1",
     "antd": "^4.0.0",
     "axios": "^0.19.2",
-    "date-fns": "^2.9.0",
+    "date-fns": "^2.10.0",
     "http-proxy-middleware": "^1.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.13.0",
