--- a/Dockerfile.caprover
+++ b/Dockerfile.caprover
@@ -20,7 +20,6 @@ COPY . .
 # Using go get.
 RUN go get -u -v golang.org/x/tools/cmd/goimports
 
-RUN ls -hal .
 RUN ./typicalw build
 
 # RUN mkdir /usr/src/backend
@@ -39,4 +38,5 @@ FROM scratch
 COPY --from=frontend-builder /usr/src/frontend/build /app/build
 COPY --from=backend-builder /usr/src/backend/bin/hotstone-seo /app/hotstone-seo
 # Run the binary.
+RUN ls -hal /app
 CMD ["/app/hotstone-seo"]
