--- a/Dockerfile.caprover
+++ b/Dockerfile.caprover
@@ -19,10 +19,12 @@ RUN go get -u -v golang.org/x/tools/cmd/goimports
 RUN ./typicalw build
 
 # === BUILD FINAL ===
-FROM alpine
+FROM golang:alpine
 
 COPY --from=frontend-builder /usr/src/frontend/build /app/build
 COPY --from=backend-builder /usr/src/backend/bin/hotstone-seo /app/hotstone-seo
+
+COPY --from=backend-builder /usr/src/backend /src/backend
 
 RUN ls -hal /app
 CMD ["/app/hotstone-seo"]
