--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -31,7 +31,7 @@
     "xstate": "^4.7.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,6 +52,9 @@
     ]
   },
   "devDependencies": {
+    "@cypress/instrument-cra": "^1.1.0",
+    "@testing-library/cypress": "^5.3.0",
+    "cypress": "^4.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.1",
