--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -34,7 +34,8 @@
     "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:run": "cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
