--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,8 +7,8 @@ jobs:
       working-directory: ./ui-v2
     strategy:
       matrix:
-        node: [ '12', '10' ]
-    name: Node ${{ matrix.node }} sample
+        node: [ '12' ]
+    name: Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
