--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest-mock-axios": "^3.2.0",
-    "react-test-renderer": "^16.13.0"
+    "react-test-renderer": "^16.13.0",
+    "start-server-and-test": "^1.10.10"
   }
 }
