--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,8 +17,8 @@ jobs:
           node-version: ${{ matrix.node }}
       - run: npm install
         working-directory: ${{env.working-directory}}
-      # - run: npm run test:coverage
-      #   working-directory: ${{env.working-directory}}
+      - run: npm run test:coverage
+        working-directory: ${{env.working-directory}}
       - run: npm run test-e2e
         working-directory: ${{env.working-directory}}  
       - run: npm run build
