--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Build
-      run: go build -v ./cmd/hotstone-seo
+      run: ./typicalw build
 
     - name: Test
-      run: go test ./...
+      run: ./typicalw test
