--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      working-directory: ./ui-v2
+      working-directory: ./ui
     strategy:
       matrix:
         node: [ '12' ]
