--- a/lefthook.yml
+++ b/lefthook.yml
@@ -8,5 +8,5 @@ pre-push:
     backend-test:
       run: ./typicalw test
     frontend-test:
-      run: 'cd ui-v2 && npm run test:coverage'
+      run: 'cd ui && npm run test:coverage'
     
