--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.0.0-rc.0",
+    "@ant-design/icons": "^4.0.5",
     "@nivo/line": "^0.61.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@use-hooks/interval": "^1.0.1",
     "@xstate/react": "^0.8.1",
-    "antd": "^4.0.0",
+    "antd": "^4.1.0",
     "axios": "^0.19.2",
     "date-fns": "^2.10.0",
     "http-proxy-middleware": "^1.0.0",
