--- a/client/examples/ssr-caching/package.json
+++ b/client/examples/ssr-caching/package.json
@@ -21,6 +21,7 @@
     "fbjs": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "memorystore": "^1.6.0",
+    "moment": "^2.22.1",
     "newrelic": "^4.6.0",
     "node-fetch": "^2.1.2",
     "react": "^16.3.2",
@@ -36,8 +37,8 @@
     "recluster": "^0.4.5",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "tix-react-ui": "^1.0.0",
-    "tix-react-ssr": "^1.1.58",
+    "tix-react-ui": "^2.0.94",
+    "tix-react-ssr": "^1.3.36",
     "winston": "^2.4.1",
     "winston-logrotate": "^1.3.0",
     "jest": "^22.4.4",
