--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,5 +21,5 @@ jobs:
         working-directory: ${{env.working-directory}}
       - run: npm run test-e2e
         working-directory: ${{env.working-directory}}  
-      - run: npm run build
+      - run: CI=false npm run build
         working-directory: ${{env.working-directory}}
