remove build for go-action as no required and temporary disable test end-to-end in node-action

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,7 +19,7 @@ jobs:
         working-directory: ${{env.working-directory}}
       - run: npm run test:coverage
         working-directory: ${{env.working-directory}}
-      - run: npm run test-e2e
-        working-directory: ${{env.working-directory}}  
+      # - run: npm run test-e2e
+      #   working-directory: ${{env.working-directory}}  
       - run: CI=false npm run build
         working-directory: ${{env.working-directory}}
