--- a/client/package.json
+++ b/client/package.json
@@ -26,16 +26,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-jest": "^25.3.0",
     "babel-loader": "^8.0.6",
     "jest": "^25.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
-  },
-  "jest": {
-    "verbose": true,
-    "roots": ["tests/"]
   }
 }
