--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "axios-mock-adapter": "^1.18.1",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.0.6",
     "jest": "^25.3.0",
