--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.0.6",
     "jest": "^25.3.0",
+    "miragejs": "^0.1.37",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
