--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/hotstone-seo/hotstone-seo#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.18.1",
+    "axios-cache-adapter": "^2.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
