--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/hotstone-seo/hotstone-seo#readme",
   "dependencies": {
     "axios": "^0.18.1",
-    "axios-cache-adapter": "^2.5.0",
+    "make-fetch-happen": "^8.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
