--- a/.github/workflows/hotstone.yml
+++ b/.github/workflows/hotstone.yml
@@ -1,16 +1,17 @@
 name: HotStone
 on: [push]
 jobs:
-
   build:
-    name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.14.2' ]
+    name: Go ${{ matrix.node }}
     steps:
-
-    - name: Set up Go 1.14
+    - name: Set up Go
       uses: actions/setup-go@v1
       with:
-        go-version: 1.14
+        go-version: ${{ matrix.node }}
       id: go
 
     - name: Check out code into the Go module directory
