--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/hotstone-seo/hotstone-seo#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "make-fetch-happen": "^8.0.4",
+    "node-fetch": "^2.6.0",
     "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
