--- a/Dockerfile.caprover
+++ b/Dockerfile.caprover
@@ -16,7 +16,7 @@ COPY . .
 
 RUN go get -u -v golang.org/x/tools/cmd/goimports
 
-RUN ./typicalw build
+RUN ./typicalw publish
 
 # === BUILD FINAL ===
 FROM golang:alpine
