--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "preinstall": "npm install ./vendor/*.tgz",
     "start": "npx webpack -w & PORT=4000 npx nodemon server",
+    "start:server": "npx nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "json-server": "npx json-server --port 5000 --watch json-server/data.json"
   },
