--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -27,6 +27,7 @@
     "react-element-to-jsx-string": "^14.3.1",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
+    "react-syntax-highlighter": "^12.2.1",
     "serialize-javascript": "^2.1.2",
     "serve-favicon": "^2.5.0"
   },
