--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-element-to-jsx-string": "^14.3.1",
     "react-helmet": "^5.2.1",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "react-syntax-highlighter": "^12.2.1",
     "serialize-javascript": "^2.1.2",
