--- a/client/examples/server-side-rendering/package.json
+++ b/client/examples/server-side-rendering/package.json
@@ -18,11 +18,13 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/runtime": "^7.7.7",
     "bootstrap": "^4.4.1",
+    "codemirror": "^5.53.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "hotstone-client": "file:vendor/hotstone-client-0.4.1.tgz",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
+    "react-codemirror2": "^7.1.0",
     "react-dom": "^16.12.0",
     "react-element-to-jsx-string": "^14.3.1",
     "react-helmet": "^5.2.1",
