--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hotstone-client",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Client side module for interacting with a HotStone service",
-  "main": "./lib/hotstone-client.js",
+  "main": "./lib/index.js",
   "scripts": {
     "build": "rm -rf lib && npx webpack --mode=production --config webpack.config.js",
     "test": "npx jest --coverage"
@@ -36,5 +36,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0"
   }
 }
