--- a/sonar.properties
+++ b/sonar.properties
@@ -9,8 +9,8 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set.
 sonar.sources=.
 sonar.sources.inclusions=**/**.go
-sonar.inclusions=*.go,application/**/*.go,infrastructure/**/**/*.go,interfaces/**/*.go
-sonar.exclusions=main.go,**/*_test.go,docs/**,di/*.go,migrations/**/*.go,**/*_mock.go,**/mock_*.go,**/di.go,**/holder.go,shared/**/*.go
+sonar.inclusions=*.go,internal/**/*.go,pkg/**/*.go
+sonar.exclusions=main.go,**/*_test.go,docs/**,di/*.go,**/*_mock.go,**/mock_*.go
 
 sonar.tests=./
 sonar.test.inclusions=**/*_test.go
