Allow hotstone to serve static files in another directory

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,6 @@
 APP_ADDRESS=:8089
 APP_DEBUG=true
-APP_COOKIE_SECURE=false
-APP_JWT_SECRET=
-APP_LOGOUT_REDIRECT=http://localhost:3000
+APP_STATIC_DIR=build
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redispass
@@ -18,15 +16,19 @@ PG_USER=postgres
 PG_PASSWORD=pgpass
 PG_HOST=localhost
 PG_PORT=5432
-OAUTH2_GOOGLE_CLIENT_ID=
-OAUTH2_GOOGLE_CLIENT_SECRET=
-OAUTH2_GOOGLE_CALLBACK=http://localhost:3000/auth/google/callback
-OAUTH2_GOOGLE_HOSTED_DOMAIN=tiket.com
-OAUTH2_GOOGLE_COOKIE_SECURE=false
-OAUTH2_GOOGLE_REDIRECT_SUCCESS=http://localhost:3000/login
-OAUTH2_GOOGLE_REDIRECT_FAILURE=http://localhost:3000/login
 ANALYT_DBNAME=hotstone_analyt
 ANALYT_USER=postgres
 ANALYT_PASSWORD=pgpass
 ANALYT_HOST=localhost
 ANALYT_PORT=5433
+APP_COOKIE_SECURE=false
+APP_JWT_SECRET=
+AUTH_JWT_SECRET=
+AUTH_CLIENT_ID=
+AUTH_CLIENT_SECRET=
+AUTH_CALLBACK=http://localhost:8089/auth/google/callback
+AUTH_HOSTED_DOMAIN=tiket.com
+AUTH_COOKIE_SECURE=false
+AUTH_REDIRECT_SUCCESS=http://localhost:8089
+AUTH_REDIRECT_FAILURE=http://localhost:8089/login
+AUTH_LOGOUT_REDIRECT=http://localhost:8089
